Add removing and getting accounts
Add removing and getting accounts

Jira ID: FIN-5
Testing done: ran existing tests
