# src/main/java/ru/finess/finess/payment/infrastructure/JpaAccountRepository.java
@@ -1,5 +1,7 @@
 package ru.finess.finess.payment.infrastructure;
 
+import java.util.List;
+import java.util.Optional;
 import lombok.NonNull;
 import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.data.jpa.repository.Query;
@@ -16,4 +18,19 @@ public interface JpaAccountRepository extends JpaRepository<Account, AccountId> 
         where a.id = :id and a.ownerId = :userId
         """)
   boolean existsForUser(@Param("userId") UserId user, @Param("id") @NonNull AccountId accountId);
+
+  @Query(
+      """
+    select a from Account a
+    where a.id = :account and a.ownerId = :user
+  """)
+  Optional<Account> findByIdForUser(
+      @Param("user") UserId user, @Param("account") AccountId accountId);
+
+  @Query(
+      """
+        select a from Account a
+        where a.ownerId = :user
+      """)
+  List<Account> findAllForUser(@Param("user") UserId user);
 }
